<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#ff888888">

        <RelativeLayout
            android:id="@+id/row1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <RelativeLayout
                android:id="@+id/user_layout"
                android:layout_width="fill_parent"
                android:layout_height="180.0dip"
                android:background="@color/colorPrimaryDark"
                android:visibility="gone">

                <com.shuan.palakkadweekly.Utils.CircleImageView
                    android:id="@+id/user_img"
                    android:layout_width="64.0dip"
                    android:layout_height="64.0dip"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_marginLeft="24.0dip"
                    android:layout_marginTop="36.0dip"
                    android:scaleType="centerCrop"
                    android:src="@drawable/user"
                    app:civ_border_color="#ffffffff"
                    app:civ_border_width="2.0dip" />

                <TextView
                    android:id="@+id/usr_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/user_img"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="24.0dip"
                    android:text="User Name"
                    android:textColor="@color/textColor"
                    android:textSize="16.0sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/user_layout1"
                android:layout_width="fill_parent"
                android:layout_height="180.0dip"
                android:background="@color/colorPrimaryDark">

                <TextView
                    android:id="@+id/app_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="36.0dip"
                    android:text="@string/app_name"
                    android:textColor="#ffffffff"
                    android:textSize="20.0sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/sign_in"
                    android:layout_width="100.0dip"
                    android:layout_height="30.0dip"
                    android:layout_below="@id/app_logo"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="24.0dip"
                    android:background="@drawable/btn_rounded_corner"
                    android:padding="2.0dip"
                    android:paddingLeft="10.0dip"
                    android:text="@string/signIn"
                    android:textColor="#ff333333"
                    android:textSize="16.0dip" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/row2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/row1"
            android:background="#ffffffff">

            <RelativeLayout
                android:id="@+id/col1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16.0dip">

                <TextView
                    android:id="@+id/app"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4.0dip"
                    android:text="@string/applang"
                    android:textAppearance="?android:textAppearanceMedium" />

                <Switch
                    android:id="@+id/app_lang"
                    android:layout_width="wrap_content"
                    android:layout_height="30.0dip"
                    android:layout_alignParentRight="true"
                    android:thumb="@drawable/customswitchselector"
                    android:track="@drawable/custom_track" />
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:layout_below="@+id/col1"
                android:layout_marginLeft="16.0dip"
                android:layout_marginRight="16.0dip"
                android:alpha="0.3"
                android:background="#ff333333" />

            <!--<RelativeLayout
                android:id="@+id/col2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/col1"
                android:layout_margin="16.0dip">

                <TextView
                    android:id="@+id/edt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5.0dip"
                    android:text="@string/edtlang"
                    android:textAppearance="?android:textAppearanceMedium" />

                <Switch
                    android:id="@+id/edition_lang"
                    android:layout_width="wrap_content"
                    android:layout_height="30.0dip"
                    android:layout_alignParentRight="true"
                    android:thumb="@drawable/customswitchselector"
                    android:track="@drawable/custom_track" />
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:layout_below="@+id/col2"
                android:layout_marginLeft="16.0dip"
                android:layout_marginRight="16.0dip"
                android:alpha="0.3"
                android:background="#ff333333" />-->


            <RelativeLayout
                android:id="@+id/col9"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16.0dip"
                android:layout_below="@+id/col1">

                <TextView
                    android:id="@+id/edition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4.0dip"
                    android:text="@string/Edition"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true">
                <TextView
                    android:id="@+id/edtn"
                    android:text="Edition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_right"
                    android:layout_toRightOf="@+id/edtn"
                    android:layout_centerVertical="true"/>
                </RelativeLayout>
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:layout_below="@+id/col9"
                android:layout_marginLeft="16.0dip"
                android:layout_marginRight="16.0dip"
                android:alpha="0.3"
                android:background="#ff333333" />






            <RelativeLayout
                android:id="@+id/col3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/col9"
                android:layout_margin="16.0dip">

                <TextView
                    android:id="@+id/ntf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4.0dip"
                    android:text="@string/notify"
                    android:textAppearance="?android:textAppearanceMedium" />

                <Switch
                    android:id="@+id/notify"
                    android:layout_width="wrap_content"
                    android:layout_height="30.0dip"
                    android:layout_alignParentRight="true"
                    android:thumb="@drawable/customswitchselector"
                    android:track="@drawable/custom_track" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/row2"
            android:layout_marginTop="16.0dip"
            android:background="#ffffffff">

            <RelativeLayout
                android:id="@+id/col4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16.0dip"
                android:background="?android:selectableItemBackground">

                <TextView
                    android:id="@+id/fet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/fet"
                    android:textAppearance="?android:textAppearanceMedium" />
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:layout_below="@+id/col4"
                android:layout_marginLeft="16.0dip"
                android:layout_marginRight="16.0dip"
                android:alpha="0.3"
                android:background="#ff333333" />

            <RelativeLayout
                android:id="@+id/col5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/col4"
                android:layout_margin="16.0dip"
                android:background="?android:selectableItemBackground">

                <TextView
                    android:id="@+id/rec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/rcmdapp"
                    android:textAppearance="?android:textAppearanceMedium" />
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:layout_below="@+id/col5"
                android:layout_marginLeft="16.0dip"
                android:layout_marginRight="16.0dip"
                android:alpha="0.3"
                android:background="#ff333333" />

            <RelativeLayout
                android:id="@+id/col6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/col5"
                android:layout_margin="16.0dip"
                android:background="?android:selectableItemBackground">

                <TextView
                    android:id="@+id/cpy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/cpyurl"
                    android:textAppearance="?android:textAppearanceMedium" />
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:layout_below="@+id/col6"
                android:layout_marginLeft="16.0dip"
                android:layout_marginRight="16.0dip"
                android:alpha="0.3"
                android:background="#ff333333" />

            <RelativeLayout
                android:id="@+id/col7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/col6"
                android:layout_margin="16.0dip"
                android:background="?android:selectableItemBackground">

                <TextView
                    android:id="@+id/abt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/abtus"
                    android:textAppearance="?android:textAppearanceMedium" />
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:layout_below="@+id/col7"
                android:layout_marginLeft="16.0dip"
                android:layout_marginRight="16.0dip"
                android:alpha="0.3"
                android:background="#ff333333" />

            <RelativeLayout
                android:id="@+id/col8"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/col7"
                android:layout_margin="16.0dip"
                android:background="?android:selectableItemBackground">

                <TextView
                    android:id="@+id/set"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/sting"
                    android:textAppearance="?android:textAppearanceMedium" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
